--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Bootstrap Icons (optional but useful) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
@@ -22,13 +17,14 @@
     <aside class="sidebar">
       <div class="sidebar-brand">Sneat</div>
       <nav class="sidebar-nav">
-        <a class="sidebar-link active" href="#">Dashboard</a>
-        <a class="sidebar-link" href="#" ><i class="fa fa-product-hunt" aria-hidden="true"></i>Products</a>
+        <a class="sidebar-link active" href="#" data-view="pricing">Dashboard</a>
+        <a class="sidebar-link" href="#" data-view="product"><i class="fa fa-product-hunt" aria-hidden="true"></i>Products</a>
         <a class="sidebar-link" href="#"><i class="fa fa-comments-o" aria-hidden="true"></i>Chat</a>
         <a class="sidebar-link" href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i>Email</a>
         <a class="sidebar-link" href="#">Layouts</a>
         <a class="sidebar-link" href="#"><i class="fa fa-calendar" aria-hidden="true"></i>Calendar</a>
         <a class="sidebar-link" href="#">Settings</a>
+        <a class="content container-fluid"></a>
 
       </nav>
     </aside>
@@ -45,13 +41,14 @@
           <input type="search"  id="site-search" name="q" placeholder="Search [CTRL+K]" />
         </div>
         <div class="topbar-right">
-          <button class="btn btn-sm btn-light"><i class="bi bi-bell"></i></button>
           <div class="avatar">JD</div>
         </div>
       </header>
 
       <!-- Content -->
       <section class="content container-fluid">
+        <!-- Pricing View -->
+        <div id="pricing-view" class="view-content">
         <div class="pricing-header text-center">
           <h3 class="mb-1">Pricing Plans</h3>
           <p class="text-muted mb-4">
@@ -165,6 +162,12 @@
         <footer class="footer text-center text-muted mt-5 pb-4">
           © made by ThemeSelection (clone practice)
         </footer>
+        </div>
+        <!-- End Pricing View -->
+
+        <!-- Dynamic Content Container -->
+        <div id="dynamic-content" style="display: none;"></div>
+        <!-- End Dynamic Content -->
       </section>
     </main>
   </div>
