Added Products list html and css structure on the products page to display, update and delete the existing data

--- a/product.html
+++ b/product.html
@@ -36,6 +36,25 @@
 
     <button type="submit" class="btn btn-primary">Save Product</button>
   </form>
+
+  <h3 class="mb-4 mt-5">Products List</h3>
+  <div id="products-list" class="table-responsive">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Category</th>
+          <th>Stock</th>
+          <th>Date</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody id="products-tbody">
+
+      </tbody>
+    </table>
+  </div>
 </div>
 
 
