--- a/product.html
+++ b/product.html
@@ -26,7 +26,7 @@
 
     <div class="form-check mb-3">
       <input type="checkbox" class="form-check-input" id="inStock" checked>
-      <label class="form-check-label" for="inStock">In Stock</label>
+      <label type="checkbox" class="form-check-label" for="inStock">In Stock</label>
     </div>
 
     <div class="mb-3">
